--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<h1>Hello world</h1>
-<h2>Meeting 1.1</h2>
-<p>This is a Book</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Page Title</title>
+  <style>
+    body {background-color: rgb(159, 227, 236);}
+    h1 {color: red;}
+    p {color: blue;}
+  </style>
+</head>  
+<body>
+
+<h1>Title Class</h1>
+<p>Detail Commit & Push Github</p>
