--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>Page Title</title>
   <style>
-    body {background-color: rgb(159, 227, 236);}
-    h1 {color: red;}
-    p {color: blue;}
+    body {background-color: rgb(205, 206, 206);}
+    h1 {color: rgb(244, 97, 97);}
+    p {color: rgb(25, 152, 231);}
   </style>
 </head>  
 <body>
