--- a/index.html
+++ b/index.html
@@ -13,3 +13,15 @@
 <h1>Title Class</h1>
 <p>Detail Commit & Push Github</p>
 <h2>View Table</h2>
+<table>
+  <tr>
+    <td>Emil</td>
+    <td>Tobias</td>
+    <td>Linus</td>
+  </tr>
+  <tr>
+    <td>16</td>
+    <td>14</td>
+    <td>10</td>
+  </tr>
+</table>
