--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <h1>Title Class</h1>
 <p>Detail Commit & Push Github</p>
-<h2>View Table</h2>
+<h2>Table Address</h2>
 <table>
   <tr>
     <th>Name</th>
