Add New Row Table

--- a/index.html
+++ b/index.html
@@ -29,4 +29,9 @@
     <td>Nakornsrithammarat</td>
     <td>02-5554423</td>
   </tr>
+  <tr>
+    <td>YAHOO</td>
+    <td>Bangkok</td>
+    <td>090-9818287</td>
+  </tr>
 </table>
